; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_vce_v4_0.c_vce_v4_0_firmware_loaded.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_vce_v4_0.c_vce_v4_0_firmware_loaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }

@VCE = common dso_local global i32 0, align 4
@mmVCE_STATUS = common dso_local global i32 0, align 4
@VCE_STATUS_VCPU_REPORT_FW_LOADED_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"VCE not responding, trying to reset the ECPU!!!\0A\00", align 1
@mmVCE_SOFT_RESET = common dso_local global i32 0, align 4
@VCE_SOFT_RESET__ECPU_SOFT_RESET_MASK = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amdgpu_device*)* @vce_v4_0_firmware_loaded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vce_v4_0_firmware_loaded(%struct.amdgpu_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %46, %1
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 10
  br i1 %9, label %10, label %49

10:                                               ; preds = %7
  store i32 0, i32* %5, align 4
  br label %11

11:                                               ; preds = %26, %10
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 100
  br i1 %13, label %14, label %29

14:                                               ; preds = %11
  %15 = load i32, i32* @VCE, align 4
  %16 = load i32, i32* @mmVCE_STATUS, align 4
  %17 = call i32 @SOC15_REG_OFFSET(i32 %15, i32 0, i32 %16)
  %18 = call i32 @RREG32(i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @VCE_STATUS_VCPU_REPORT_FW_LOADED_MASK, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %52

24:                                               ; preds = %14
  %25 = call i32 @mdelay(i32 10)
  br label %26

26:                                               ; preds = %24
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  br label %11

29:                                               ; preds = %11
  %30 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  %31 = load i32, i32* @VCE, align 4
  %32 = load i32, i32* @mmVCE_SOFT_RESET, align 4
  %33 = call i32 @SOC15_REG_OFFSET(i32 %31, i32 0, i32 %32)
  %34 = load i32, i32* @VCE_SOFT_RESET__ECPU_SOFT_RESET_MASK, align 4
  %35 = load i32, i32* @VCE_SOFT_RESET__ECPU_SOFT_RESET_MASK, align 4
  %36 = xor i32 %35, -1
  %37 = call i32 @WREG32_P(i32 %33, i32 %34, i32 %36)
  %38 = call i32 @mdelay(i32 10)
  %39 = load i32, i32* @VCE, align 4
  %40 = load i32, i32* @mmVCE_SOFT_RESET, align 4
  %41 = call i32 @SOC15_REG_OFFSET(i32 %39, i32 0, i32 %40)
  %42 = load i32, i32* @VCE_SOFT_RESET__ECPU_SOFT_RESET_MASK, align 4
  %43 = xor i32 %42, -1
  %44 = call i32 @WREG32_P(i32 %41, i32 0, i32 %43)
  %45 = call i32 @mdelay(i32 10)
  br label %46

46:                                               ; preds = %29
  %47 = load i32, i32* %4, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %4, align 4
  br label %7

49:                                               ; preds = %7
  %50 = load i32, i32* @ETIMEDOUT, align 4
  %51 = sub nsw i32 0, %50
  store i32 %51, i32* %2, align 4
  br label %52

52:                                               ; preds = %49, %23
  %53 = load i32, i32* %2, align 4
  ret i32 %53
}

declare dso_local i32 @RREG32(i32) #1

declare dso_local i32 @SOC15_REG_OFFSET(i32, i32, i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @DRM_ERROR(i8*) #1

declare dso_local i32 @WREG32_P(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
